--- a/main.kv
+++ b/main.kv
@@ -206,8 +206,8 @@
 							adaptive_height:True
 							cols:1
 							id:layout_fondo
-							padding:15
-							spacing:20
+							padding:15,'60dp',15,15
+							spacing:'20dp'
 							MDAnchorLayout:
 								anchor_x:'center'
 								anchor_y:'center'
