bug en la construccion de ahorro correx

--- a/main.kv
+++ b/main.kv
@@ -206,7 +206,7 @@
 							adaptive_height:True
 							cols:1
 							id:layout_fondo
-							padding:15,'60dp',15,15
+							padding:'15dp','60dp','15dp','15dp'
 							spacing:'20dp'
 							MDAnchorLayout:
 								anchor_x:'center'
