--- a/main.kv
+++ b/main.kv
@@ -233,38 +233,69 @@
 						on_release:nav_drawer.set_state('open')
 			Screen:
 				name: 'concubinos'
-				MDGridLayout:
-					row_default_height:10
-					adaptive_height:True
-					cols:1
-					id:layout_fondo
-					padding:'15dp','60dp','15dp','15dp'
-					spacing:'20dp'
-					MDBoxLayout:
-						size_hint_y:None
-						height:'100dp'
-						spacing:'10dp'
-						MDIconButton:
-							icon:'menu'
-							size_hint_x:None
-							on_release:nav_drawer.set_state('open')
+				ScrollView:
+					MDGridLayout:
+						row_default_height:10
+						adaptive_height:True
+						cols:1
+						padding:'15dp'
+						spacing:'20dp'
 						MDBoxLayout:
+							size_hint_y:None
+							height:'20dp'
 							spacing:'10dp'
+							MDAnchorLayout:
+								anchor_x:'left'
+								anchor_y:'center'
+								size_hint_x:None
+								MDIconButton:
+									icon:'menu'
+									on_release:nav_drawer.set_state('open')
+							MDLabel:
+								font_style:'H6'
+								halign:'right'
+								valign:'center'
+								text:"Concubino's house"
+						MDLabel:
+							halign:'center'
+							font_style:'Subtitle2'
+							text:'La yos le debe al yoryis 500 varo'
+						MDCard:
+							elevation:1
+							size_hint_y:None
+							height:self.minimum_height
 							orientation:'vertical'
+							padding:'20dp'
+							spacing:'20dp'
 							MDLabel:
-								text:'Balance del yoryis: '
-								halign:'right'
-								valing:'center'
+								text:'Gastos mutuos'
 								font_style:'H6'
-								theme_text_color: "Custom"
-    							text_color: '#474747' if not '-' in self.text else '#8c0900'
+								adaptive_height:True
 							MDLabel:
-								text:'Balance de la yos: '
-								halign:'right'
-								valing:'center'
-								font_style:'H6'
+								text:'Aún no hay nada por aquí'
+								halign:'center'
+								font_size:'15sp'
+								adaptive_height:True
 								theme_text_color: "Custom"
-    							text_color: '#474747' if not '-' in self.text else '#8c0900'
+    							text_color: '#727372'
+						MDCard:
+							elevation:1
+							size_hint_y:None
+							height:self.minimum_height
+							orientation:'vertical'
+							padding:'20dp'
+							spacing:'20dp'
+							MDLabel:
+								text:'Lista de despensa'
+								font_style:'H6'
+								adaptive_height:True
+							MDLabel:
+								text:'Aún no hay nada por aquí'
+								halign:'center'
+								font_size:'15sp'
+								adaptive_height:True
+								theme_text_color: "Custom"
+    							text_color: '#727372'
 		MDNavigationDrawer:
 			id:nav_drawer
 			MDBoxLayout:
