--- a/main.kv
+++ b/main.kv
@@ -1,4 +1,32 @@
 #:import WipeTransition kivy.uix.screenmanager.WipeTransition
+<BtmSheet>:
+	orientation:'vertical'
+	padding:'20dp'
+	spacing:'10dp'
+	size_hint_y: None
+    height: "400dp"
+	MDTextField:
+		hint_text:'¿Quién lo pago?'
+		id:quien
+	MDTextField:
+		hint_text:'¿Cuánto pago?'
+		id:cantidad
+	MDBoxLayout:
+		MDFloatLayout:
+		MDRectangleFlatButton:
+			text: "Cancelar"
+			theme_text_color: "Custom"
+			text_color: "black"
+			line_color: "white"
+			on_release:app.custom_sheet.close()
+		MDRectangleFlatButton:
+			text: "Guardar"
+			theme_text_color: "Custom"
+			text_color: "#089cba"
+			line_color: "white"
+			on_release:app.addGastoConcubino()
+
+
 <Cards>:
 	elevation:2
 	orientation: "vertical"
@@ -267,17 +295,24 @@
 							orientation:'vertical'
 							padding:'20dp'
 							spacing:'20dp'
-							MDLabel:
-								text:'Gastos mutuos'
-								font_style:'H6'
-								adaptive_height:True
-							MDLabel:
-								text:'Aún no hay nada por aquí'
-								halign:'center'
-								font_size:'15sp'
-								adaptive_height:True
-								theme_text_color: "Custom"
-    							text_color: '#727372'
+							id:gastos_concubinos
+							MDBoxLayout:
+								size_hint_y:None
+								height:self.minimum_height
+								MDLabel:
+									text:'Gastos mutuos'
+									font_style:'H6'
+									adaptive_height:True
+								MDIconButton:
+									icon:'plus'
+									on_release:app.custom_sheet.open()
+							#MDLabel:
+							#	text:'Aún no hay nada por aquí'
+							#	halign:'center'
+							#	font_size:'15sp'
+							#	adaptive_height:True
+							#	theme_text_color: "Custom"
+    						#	text_color: '#727372'
 						MDCard:
 							elevation:1
 							size_hint_y:None
