Add gastos avance

--- a/main.kv
+++ b/main.kv
@@ -288,6 +288,7 @@
 							halign:'center'
 							font_style:'Subtitle2'
 							text:'La yos le debe al yoryis 500 varo'
+							id:balanceConcubino
 						MDCard:
 							elevation:1
 							size_hint_y:None
@@ -306,13 +307,13 @@
 								MDIconButton:
 									icon:'plus'
 									on_release:app.custom_sheet.open()
-							#MDLabel:
-							#	text:'Aún no hay nada por aquí'
-							#	halign:'center'
-							#	font_size:'15sp'
-							#	adaptive_height:True
-							#	theme_text_color: "Custom"
-    						#	text_color: '#727372'
+							MDLabel:
+								text:'Aún no hay nada por aquí'
+								halign:'center'
+								font_size:'15sp'
+								adaptive_height:True
+								theme_text_color: "Custom"
+    							text_color: '#727372'
 						MDCard:
 							elevation:1
 							size_hint_y:None
