--- a/widgets/widgets.kv
+++ b/widgets/widgets.kv
@@ -2,12 +2,25 @@
 	radius:10
 	elevation:0
 	style:"filled"
-	md_bg_color:"#dcf2f4" if self.who=='luis' else "#f4e5dc"
+	md_bg_color:"#e5e5e5"
 	padding:'5dp'
 	spacing:'5dp'
+	MDAnchorLayout:
+		anchor_x:'center'
+		anchor_y:'center'
+		size_hint:None,None
+		MDIcon:
+			icon:'circle'
+			theme_text_color: "Custom"
+			text_color: "#478db3" if root.quien=='luis' else "#b34782"
 	MDBoxLayout:
 		orientation:'vertical'
-		size_hint_x:.3
+		MDLabel:
+			adaptive_height:True
+			font_style:'H6'
+			text:"{:,.2f}".format(root.cantidad)
+			valign:'center'
+			halign:'center'
 		MDLabel:
 			adaptive_height:True
 			font_style:'H6'
@@ -16,13 +29,6 @@
 			adaptive_height:True
 			font_style:'H6'
 			text:root.fecha
-	MDLabel:
-		adaptive_height:True
-		font_style:'H6'
-		text:"{:,.2f}".format(root.cantidad)
-		valign:'center'
-		halign:'center'
-
 
 <ConcubinosContent>:
 	orientation:'vertical'
