Funcionamiento de gastos concubinos completo

--- a/screens/screenConcubinos/screenConcubinos.kv
+++ b/screens/screenConcubinos/screenConcubinos.kv
@@ -45,6 +45,7 @@
                         adaptive_height:True
                     MDIconButton:
                         icon:'plus'
+                        on_release:root.addGastoConcubino()
                 MDLabel:
                     text:'Aún no hay nada por aquí'
                     halign:'center'
