--- a/widgets/widgets.kv
+++ b/widgets/widgets.kv
@@ -3,42 +3,77 @@
 	elevation:0
 	style:"filled"
 	md_bg_color:"#e5e5e5"
-	padding:'5dp'
-	spacing:'5dp'
+	padding:'15dp'
+	spacing:'15dp'
+	size_hint_y:None
+	height:self.minimum_height
 	MDAnchorLayout:
 		anchor_x:'center'
 		anchor_y:'center'
-		size_hint:None,None
+		height:data_box.height
+		size_hint_x:.15
 		MDIcon:
 			icon:'circle'
 			theme_text_color: "Custom"
-			text_color: "#478db3" if root.quien=='luis' else "#b34782"
+			text_color: "#478db3" if root.quien=='Luis' else "#b34782"
 	MDBoxLayout:
 		orientation:'vertical'
+		size_hint_y:None
+		height:self.minimum_height
+		id:data_box
+		spacing:'5dp'
+		MDLabel:
+			font_style:'H6'
+			text:"${:,.2f}".format(root.cantidad)
+			adaptive_height:True
 		MDLabel:
 			adaptive_height:True
-			font_style:'H6'
-			text:"{:,.2f}".format(root.cantidad)
-			valign:'center'
-			halign:'center'
+			text:"Pagó: "+root.quien
+			font_size:'13sp'
+			theme_text_color: "Custom"
+			text_color: "#5f5f5f"
 		MDLabel:
 			adaptive_height:True
-			font_style:'H6'
-			text:root.quien
-		MDLabel:
-			adaptive_height:True
-			font_style:'H6'
-			text:root.fecha
+			text:"Fecha: "+root.fecha
+			font_size:'13sp'
+			theme_text_color: "Custom"
+			text_color: "#5f5f5f"
+
 
 <ConcubinosContent>:
 	orientation:'vertical'
 	padding:'20dp'
 	spacing:'10dp'
 	size_hint_y: None
-    height: "180dp"
-	MDTextField:
-		hint_text:'¿Quién lo pago?'
-		id:quien
+    height: "220dp"
+	MDBoxLayout:
+		padding:'5dp'
+		spacing:'5dp'
+		size_hint_y:None
+		height:self.minimum_height
+		id:boxChip
+		MDChip:
+			icon_check_color: (0, 0, 0, 1)
+    		text_color: (0, 0, 0, 0.5)
+    		_no_ripple_effect:True
+			active:True if root.who=='luis' else False
+			text: "Luis"
+			id:luis
+			on_release:
+				self.active=True
+				joss.active=False
+				root.quien='luis'
+		MDChip:
+			icon_check_color: (0, 0, 0, 1)
+    		text_color: (0, 0, 0, 0.5)
+    		_no_ripple_effect:True
+			active:True if root.who=='joss' else False
+			text: "Joss"
+			id:joss
+			on_release:
+				self.active=True
+				luis.active=False
+				root.quien='joss'
 	MDTextField:
 		hint_text:'¿Cuánto pago?'
 		id:cantidad
